--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
           </div>
         </div>
     </div>
-    <div class="footer sticky-bottom">
+    <footer class="footer sticky-bottom">
         <div class="footer1">
             Made with ❤ by Himanshu
         </div>
         <div class="footer2">
             All Rights Reserved
         </div>
-    </div>
+      </footer>
     <script type="text/javascript" src="script.js">
   </script>
     
