--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           </div>
         </div>
     </div>
-    <footer class="footer sticky-bottom">
+    <footer class="footer fixed-bottom">
         <div class="footer1">
             Made with ❤ by Himanshu
         </div>
