--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link href="./style.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-
-    <meta charset="UTF-8">
+         <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+        <meta charset="UTF-8">
   </head>
 
   <body class="body">
@@ -47,18 +47,30 @@
       Good Luck!
     </div>
     <div class="container">
-        <div id="database">
-          <div class="row">
-              <div class="database-heading">
-                  Streak
-              </div>
-              <div id="streak" class="database-number">
+           <div class="database1 row">
+
+              <div class="col database">
+                  <div class="database-heading row">
+                      Streak
+                  </div>
+                  <div id="streak" class="database-number row">
+
+                  </div>
 
               </div>
-          </div>
+              <div class="col database">
+                  <div class="database-heading row">
+                      Max. Streak
+                  </div>
+                  <div id="max-streak" class="database-number row">
+
+                  </div>
+
+              </div>
+            </div>
         </div>
-    </div>
-    <footer class="footer fixed-bottom">
+  
+    <footer class="footer">
         <div class="footer1">
             Made with ❤ by Himanshu
         </div>
