--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div class="container">
            <div class="database1 row">
 
-              <div class="col database" style="max-width: 120px;">
+              <div class="col database">
                   <div class="database-heading row">
                       Streak
                   </div>
@@ -58,7 +58,7 @@
                   </div>
 
               </div>
-              <div class="col database" style="width: 250px;">
+              <div class="col database">
                   <div class="database-heading row">
                       Max. Streak
                   </div>
