--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                   <div class="database-heading row">
                       Streak
                   </div>
-                  <div id="streak" class="database-number row">
+                  <div id="streak" class="database-number row" style="margin-top: 22px;">
 
                   </div>
 
