--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </div>
         </div>
   
-    <footer class="footer fixed-bottom">
+    <footer class="footer">
         <div class="footer1">
             Made with ❤ by Himanshu
         </div>
